--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <body>
         <header class="header pure-g">
         	<div class="header__logo pure-u-1-2 pure-u-sm-3-5 pure-u-md-1-3">
-        		<a class="logo" href="#"><span class="logo__highlight">С</span>ороколет</a>
+        		<a class="logo" href="#"><span class="logo__highlight">К</span>роха</a>
         	</div>
         	<div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
         		<nav class="menu menu_twitter-like">
@@ -47,8 +47,24 @@
         	</div>
         	<nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">M+</nav>
         </header>
-        <section class="section section_main">
-        	<div class="overlay"></div>
+
+        <section class="section section-main">
+        </section>
+
+        <section class="section section-about pure-g">
+            <div class="pure-u-1-1 section__title">
+                <h3 class="title title_h3">Кто мы</h3>
+                <h2 class="title title_h2">Немного о нас</h2>
+            </div>
+
+            <div class="pure-u-1 pure-u-md-3-5 section-about__text">
+                Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula, ut interdum nisl vulputate. Vivamus ultrices luctus quam eu feugiat. Nunc sagittis odio eget odio laoreet mollis. Nullam rutrum blandit convallis. Maecenas id nisi eget nunc convallis consectetur nec sed nibh. Mauris in gravida
+
+                Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula Sed justo sapien, ultrices non rutrum in, condimentum non sem. Aliquam finibus condimentum tellus, vel viverra est gravida ut. Duis vestibulum lorem et eros fermentum tristique penatibus et magnis dis parturient montes
+            </div>
+            <div class="pure-u-1 pure-u-md-2-5 section-about__image">
+                <img class="pure-img" src="img/about-image.jpg">
+            </div>
         </section>
         <script src="js/vendor/jquery-1.12.2.js"></script>
     </body>
