--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <body>
         <header class="header pure-g">
         	<div class="header__logo pure-u-1-2 pure-u-sm-3-5 pure-u-md-1-3">
-        		<a class="logo" href="#"><span class="logo__highlight">К</span>роха</a>
+                <a class="logo" href="#">
+                    <span class="logo__text">Кр</span><span class="logo__baby"></span><span class="logo__text">ха</span>
+                </a>
         	</div>
         	<div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
         		<nav class="menu menu_twitter-like">
