--- a/index.html
+++ b/index.html
@@ -33,28 +33,30 @@
 <![endif]-->
     </head>
     <body>
-        <header class="header pure-g">
-        	<div class="header__logo pure-u-1-2 pure-u-sm-3-5 pure-u-md-1-3">
-                <a class="logo" href="#">
-                    <span class="logo__text">Кр</span><span class="logo__baby"></span><span class="logo__text">ха</span>
-                </a>
-        	</div>
-        	<div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
-        		<nav class="menu menu_twitter-like">
-        			<a class="menu__item" href="#">Главная</a>
-        			<a class="menu__item" href="#">О нас</a>
-        			<a class="menu__item menu__item_active" href="#">Новости</a>
-        			<a class="menu__item" href="#">Контакты</a>
-        		</nav>
-        	</div>
-        	<nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">M+</nav>
+        <header class="header">
+            <div class="pure-g">
+                <div class="header__logo pure-u-1-2 pure-u-sm-3-5 pure-u-md-1-3">
+                    <a class="logo" href="#">
+                        <span class="logo__text">Кр</span><span class="logo__baby"></span><span class="logo__text">ха</span>
+                    </a>
+                </div>
+                <div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
+                    <nav class="menu menu_twitter-like">
+                        <a class="menu__item" href="#">Главная</a>
+                        <a class="menu__item" href="#">О нас</a>
+                        <a class="menu__item menu__item_active" href="#">Новости</a>
+                        <a class="menu__item" href="#">Контакты</a>
+                    </nav>
+                </div>
+                <nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">M+</nav>
+            </div>
         </header>
 
         <section class="section section-main">
         </section>
 
         <section class="section section-about pure-g">
-            <div class="pure-u-1-1 section__title">
+            <div class="pure-u-1 section__title">
                 <h3 class="title title_h3">Кто мы</h3>
                 <h2 class="title title_h2">Немного о нас</h2>
             </div>
@@ -68,6 +70,8 @@
                 <img class="pure-img" src="img/about-image.jpg">
             </div>
         </section>
+
+        <footer class="footer"></footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
     </body>
 </html>
