add mobile nav button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                         <a class="menu__item" href="#">Контакты</a>
                     </nav>
                 </div>
-                <nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">M+</nav>
+                <nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">
+                    <div class="nav-button ">
+                        <div class="nav-button__line nav-button__line_fill-speed_fast"></div>
+                        <div class="nav-button__line"></div>
+                        <div class="nav-button__line nav-button__line_fill-speed_slow"></div>
+                    </div>
+                </nav>
             </div>
         </header>
 
