--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <body>
         <header class="header">
             <div class="pure-g">
-                <div class="header__logo pure-u-1-2 pure-u-sm-3-5 pure-u-md-1-3">
+                <div class="header__logo pure-u-1-2 pure-u-sm-4-5 pure-u-md-1-3">
                     <a class="logo" href="#">
                         <span class="logo__text">Кр</span><span class="logo__baby"></span><span class="logo__text">ха</span>
                     </a>
@@ -48,7 +48,7 @@
                         <a class="menu__item" href="#">Контакты</a>
                     </nav>
                 </div>
-                <nav class="header__menu_mobile pure-u-sm-2-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">
+                <nav class="header__menu_mobile pure-u-1-2 pure-u-sm-1-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">
                     <div class="nav-button ">
                         <div class="nav-button__line nav-button__line_fill-speed_fast"></div>
                         <div class="nav-button__line"></div>
