--- a/index.html
+++ b/index.html
@@ -77,7 +77,39 @@
             </div>
         </section>
 
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="pure-g">
+                <div class="pure-u-1">
+                    <h3 class="title title_footer">Подпишитесь на наши новости</h3>
+                    <p class="footer__subtitle">Самые свежии акции и скидки нашей компании у Вас на почте</p>
+                </div>
+                <div class="pure-g footer__newsletter">
+                    <form class="newsletter" method="post" action="subscribe.php">
+                        <input class="pure-u-1 pure-u-sm-3-4 newsletter__email" type="email" value name="email" placeholder="Адрес вашей эл. почты">
+                        <input class="pure-u-1 pure-u-sm-1-4 newsletter__subscribe" type="submit" value="Отправить">
+                    </form>
+                </div>
+                <div class="pure-g footer__copyright">
+                    <div class="pure-u-1">
+                        <p class="footer__subtitle">&#169; С.В. Сороколет, 2016</p>
+                    </div>
+                </div>
+                <div class="pure-g footer__social-icons">
+                    <div class="pure-u-1 social-icons">
+                        <a class="social-icons__item social-icons__item_vk" href="#">
+                            <span class="social-icons__name">Вконтакте</span>
+                        </a>
+                        <a class="social-icons__item social-icons__item_mail" href="#">
+                            <span class="social-icons__name">Почта</span>
+                        </a>
+                        <a class="social-icons__item social-icons__item_message" href="#">
+                            <span class="social-icons__name">Отзыв</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
     </body>
 </html>
