add facts (parallax), nicescroll, fixes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
                 <img class="pure-img" src="img/about-image.jpg">
             </div>
         </section>
-
+        <section id="sectionFacts" class="section section-facts" data-image="img/facts-bg.jpg">
+            <div class="pure-g">
+                <div class="pure-u-1 section-title">
+                    <h3 class="title title_h3 title_invert">Немного фактов</h3>
+                    <h2 class="title title_h2 title_invert">Нам есть чем гордиться</h3>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="pure-g">
                 <div class="pure-u-1">
@@ -111,5 +118,8 @@
 
         </footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
+        <script src="js/vendor/jquery.imageScroll.min.js"></script>
+        <script src="js/vendor/jquery.nicescroll.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
