--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                     <h2 class="title title_h2 title_invert">Нам есть чем гордиться</h3>
                 </div>
             </div>
+            <div class="pure-g section-facts__statistic">
+                <div class="pure-u-1 pure-u-sm-1-3 statistic">
+                    <div class="statistic__number">10 лет</div>
+                    <div class="statistic__text">на рынке</div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-1-3 statistic">
+                    <div class="statistic__number">2500+</div>
+                    <div class="statistic__text">наименований</div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-1-3 statistic">
+                    <div class="statistic__number">10 000+</div>
+                    <div class="statistic__text">клиентов</div>
+                </div>
+            </div>
         </section>
         <footer class="footer">
             <div class="pure-g">
