--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
         <title>digit.meta</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/pure/base-min.css">
         <link rel="stylesheet" href="css/pure/grids-min.css">
         <!--[if lte IE 8]>
-  		<link rel="stylesheet" href="css/pure/grids-responsive-old-ie-min.css">
-		<![endif]-->
-		<!--[if gt IE 8]><!-->
-  		<link rel="stylesheet" href="css/pure/grids-responsive-min.css">
-		<!--<![endif]-->
-		<link rel="stylesheet" href="fonts/open-sans/open-sans.css">
+                <link rel="stylesheet" href="css/pure/grids-responsive-old-ie-min.css">
+        <![endif]-->
+        <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
+        <!--<![endif]-->
+        <link rel="stylesheet" href="fonts/open-sans/open-sans.css">
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
-		<link rel="stylesheet" href="css/main.css">
-		<!--[if lt IE 9]>
-		   <script>
-		      document.createElement('header');
-		      document.createElement('nav');
-		      document.createElement('section');
-		      document.createElement('article');
-		      document.createElement('aside');
-		      document.createElement('footer');
-		   </script>
-<![endif]-->
+        <link rel="stylesheet" href="css/main.css">
+        <!--[if lt IE 9]>
+        <script>
+        document.createElement('header');
+        document.createElement('nav');
+        document.createElement('section');
+        document.createElement('article');
+        document.createElement('aside');
+        document.createElement('footer');
+        </script>
+        <![endif]-->
     </head>
     <body>
         <header class="header">
@@ -57,19 +56,15 @@
                 </nav>
             </div>
         </header>
-
         <section class="section section-main">
         </section>
-
         <section class="section section-about pure-g">
             <div class="pure-u-1 section__title">
                 <h3 class="title title_h3">Кто мы</h3>
                 <h2 class="title title_h2">Немного о нас</h2>
             </div>
-
             <div class="pure-u-1 pure-u-md-3-5 section-about__text">
                 Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula, ut interdum nisl vulputate. Vivamus ultrices luctus quam eu feugiat. Nunc sagittis odio eget odio laoreet mollis. Nullam rutrum blandit convallis. Maecenas id nisi eget nunc convallis consectetur nec sed nibh. Mauris in gravida
-
                 Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula Sed justo sapien, ultrices non rutrum in, condimentum non sem. Aliquam finibus condimentum tellus, vel viverra est gravida ut. Duis vestibulum lorem et eros fermentum tristique penatibus et magnis dis parturient montes
             </div>
             <div class="pure-u-1 pure-u-md-2-5 section-about__image">
@@ -78,7 +73,7 @@
         </section>
         <section id="sectionFacts" class="section section-facts" data-image="img/facts-bg.jpg">
             <div class="pure-g">
-                <div class="pure-u-1 section-title">
+                <div class="pure-u-1 section__title">
                     <h3 class="title title_h3 title_invert">Немного фактов</h3>
                     <h2 class="title title_h2 title_invert">Нам есть чем гордиться</h3>
                 </div>
@@ -98,42 +93,107 @@
                 </div>
             </div>
         </section>
+
+        <section class="section news">
+            <div class="pure-g">
+                <div class="pure-u-1 section__title">
+                    <h3 class="title title_h3">Наши новости</h3>
+                    <h2 class="title title_h2">Только самое свежее</h2>
+                </div>
+            </div>
+            <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-1-3 news__item">
+                    <article class="news-item">
+                        <img src="img/news/news_1.jpg" alt="" class="pure-img news-item__img">
+                        <h4 class="news-item__title">Выбор питания и здоровье малыша</h4>
+                        <span class="news-item__date">30 марта /</span>
+                        <a class="news-item__comments" href="#">22 Комментария</a>
+                        <p class="news-item__teaser">Эксперты детского медицинского центра Джона Хопкинса выяснили: только 6% вскормленных грудью малышек попадали в больницу с острыми респираторными заболеваниями </p>
+                        <a class="news-item__button" href="#"></a>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="section contacts">
+            <div class="pure-g">
+                <div class="pure-u-1 section__title">
+                    <h3 class="title title_h3">Не теряйте время</h3>
+                    <h2 class="title title_h2">Звоните прямо сейчас</h2>
+                </div>
+            </div>
+            <div class="pure-g">
+                <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
+                    <div class="contact-item">
+                        <span class="contact-item__icon contact-item__icon_address"></span>
+                        <h4 class="contact-item__title">Наш офис</h4>
+                        <p class="contact-item__text">г. Ярославль, ул. Журавлева, 5</p>
+                    </div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
+                    <div class="contact-item">
+                        <span class="contact-item__icon contact-item__icon_phone"></span>
+                        <h4 class="contact-item__title">Позвоните</h4>
+                        <p class="contact-item__text">+7 (4852) 45-21-59<br>+7 (4852) 47-79-42</p>
+                    </div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
+                    <div class="contact-item">
+                        <span class="contact-item__icon contact-item__icon_mail"></span>
+                        <h4 class="contact-item__title">Напишите</h4>
+                        <p class="contact-item__text"><a href="mailto: pitanie@inbox.ru" class="contact-item__link">pitanie@inbox.ru</a></p>
+                    </div>
+                </div>
+                <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
+                    <div class="contact-item">
+                        <span class="contact-item__icon contact-item__icon_working-hours"></span>
+                        <h4 class="contact-item__title">Рабочие часы</h4>
+                        <p class="contact-item__text">Будни 9:00 - 18:00</p>
+                    </div>
+                </div>
+            </div>
+        <div id="googleMap" class="contacts__map"></div>
+        </section>
+
         <footer class="footer">
             <div class="pure-g">
                 <div class="pure-u-1">
                     <h3 class="title title_footer">Подпишитесь на наши новости</h3>
                     <p class="footer__subtitle">Самые свежии акции и скидки нашей компании у Вас на почте</p>
                 </div>
-                <div class="pure-g footer__newsletter">
-                    <form class="newsletter" method="post" action="subscribe.php">
-                        <input class="pure-u-1 pure-u-sm-3-4 newsletter__email" type="email" value name="email" placeholder="Адрес вашей эл. почты">
-                        <input class="pure-u-1 pure-u-sm-1-4 newsletter__subscribe" type="submit" value="Отправить">
-                    </form>
+                <div class="pure-g">
+                    <div class="footer__newsletter">
+                        <form class="newsletter" method="post" action="subscribe.php">
+                            <input class="pure-u-1 pure-u-sm-3-4 newsletter__email" type="email" value name="email" placeholder="Адрес вашей эл. почты">
+                            <input class="pure-u-1 pure-u-sm-1-4 newsletter__subscribe" type="submit" value="Отправить">
+                        </form>
+                    </div>
                 </div>
-                <div class="pure-g footer__copyright">
-                    <div class="pure-u-1">
+                <div class="pure-g">
+                    <div class="pure-u-1 footer__copyright">
                         <p class="footer__subtitle">&#169; С.В. Сороколет, 2016</p>
                     </div>
                 </div>
-                <div class="pure-g footer__social-icons">
-                    <div class="pure-u-1 social-icons">
-                        <a class="social-icons__item social-icons__item_vk" href="#">
-                            <span class="social-icons__name">Вконтакте</span>
-                        </a>
-                        <a class="social-icons__item social-icons__item_mail" href="#">
-                            <span class="social-icons__name">Почта</span>
-                        </a>
-                        <a class="social-icons__item social-icons__item_message" href="#">
-                            <span class="social-icons__name">Отзыв</span>
-                        </a>
+                <div class="pure-g">
+                    <div class="pure-u-1 footer__social-icons">
+                        <div class="social-icons">
+                            <a class="social-icons__item social-icons__item_vk" href="#">
+                                <span class="social-icons__name">Вконтакте</span>
+                            </a>
+                            <a class="social-icons__item social-icons__item_mail" href="#">
+                                <span class="social-icons__name">Почта</span>
+                            </a>
+                            <a class="social-icons__item social-icons__item_message" href="#">
+                                <span class="social-icons__name">Отзыв</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
         <script src="js/vendor/jquery.imageScroll.min.js"></script>
-        <script src="js/vendor/jquery.nicescroll.min.js"></script>
         <script src="js/main.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcrdb308_9HE8Sahb-nA30-VV7hHpwcmU&callback=initMap"></script>
     </body>
 </html>
