--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
         <!--<![endif]-->
+        <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
         <link rel="stylesheet" href="fonts/open-sans/open-sans.css">
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
@@ -41,10 +44,10 @@
                 </div>
                 <div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
                     <nav class="menu menu_twitter-like">
-                        <a class="menu__item" href="#">Главная</a>
-                        <a class="menu__item" href="#">О нас</a>
-                        <a class="menu__item menu__item_active" href="#">Новости</a>
-                        <a class="menu__item" href="#">Контакты</a>
+                        <a class="menu__item" href="#home">Главная</a>
+                        <a class="menu__item" href="#about">О нас</a>
+                        <a class="menu__item menu__item_active" href="#news">Новости</a>
+                        <a class="menu__item" href="#contacts">Контакты</a>
                     </nav>
                 </div>
                 <nav class="header__menu_mobile pure-u-1-2 pure-u-sm-1-5 pure-hidden-md pure-hidden-lg pure-hidden-xl">
@@ -56,16 +59,20 @@
                 </nav>
             </div>
         </header>
-        <section class="section section-main">
+        <section id="home" class="section section-main">
         </section>
-        <section class="section section-about pure-g">
+        <section id="about" class="section section-about pure-g">
             <div class="pure-u-1 section__title">
                 <h3 class="title title_h3">Кто мы</h3>
                 <h2 class="title title_h2">Немного о нас</h2>
             </div>
-            <div class="pure-u-1 pure-u-md-3-5 section-about__text">
-                Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula, ut interdum nisl vulputate. Vivamus ultrices luctus quam eu feugiat. Nunc sagittis odio eget odio laoreet mollis. Nullam rutrum blandit convallis. Maecenas id nisi eget nunc convallis consectetur nec sed nibh. Mauris in gravida
-                Pellentesque sapien purus, sagittis eu accumsan convallis, vehicula ut lectus. Fusce accumsan purus pretium ligula vehicula Sed justo sapien, ultrices non rutrum in, condimentum non sem. Aliquam finibus condimentum tellus, vel viverra est gravida ut. Duis vestibulum lorem et eros fermentum tristique penatibus et magnis dis parturient montes
+            <div class="pure-u-1 pure-u-md-3-5">
+                <p class="section-about__text">
+                    Вы ищите «где купить детское питание оптом?» Открываете магазин детского питания или уже имеете свой бизнес? Наша компании — один из крупнейших поставщиков детских товаров на рынке Ярославля и области. Десятилетний опыт работы позволяет нам с уверенностью сказать: мы точно знаем, что нужно детям и их родителям.
+                </p>
+                <p class="section-about__text">
+                    А может быть вы счастливые родители и ищите качественные и недорогие товары для своего малыша? Для вашего удобства наши розничные магазины присутствуют почти в каждом районе города. Вы будете приятно удивлены ассортиментом и качеством товаров.
+                </p>
             </div>
             <div class="pure-u-1 pure-u-md-2-5 section-about__image">
                 <img class="pure-img" src="img/about-image.jpg">
@@ -94,7 +101,7 @@
             </div>
         </section>
 
-        <section class="section news">
+        <section id="news" class="section news">
             <div class="pure-g">
                 <div class="pure-u-1 section__title">
                     <h3 class="title title_h3">Наши новости</h3>
@@ -104,18 +111,62 @@
             <div class="pure-g">
                 <div class="pure-u-1 pure-u-md-1-3 news__item">
                     <article class="news-item">
-                        <img src="img/news/news_1.jpg" alt="" class="pure-img news-item__img">
+                        <div class="news-item__img-wrapper">
+                            <img src="img/news/news_1.jpg" alt="Новости" class="news-item__img">
+                        </div>
                         <h4 class="news-item__title">Выбор питания и здоровье малыша</h4>
                         <span class="news-item__date">30 марта /</span>
                         <a class="news-item__comments" href="#">22 Комментария</a>
-                        <p class="news-item__teaser">Эксперты детского медицинского центра Джона Хопкинса выяснили: только 6% вскормленных грудью малышек попадали в больницу с острыми респираторными заболеваниями </p>
-                        <a class="news-item__button" href="#"></a>
+                        <p class="news-item__teaser">Эксперты детского медицинского центра Джона Хопкинса выяснили: только 6% вскормленных грудью малышек попадали в больницу с острыми респираторными заболеваниями...</p>
+                        <a class="news-item__button" href="#">Читать далее</a>
+                    </article>
+                </div>
+                <div class="pure-u-1 pure-u-md-1-3 news__item">
+                    <article class="news-item">
+                        <div class="news-item__img-wrapper">
+                            <img src="img/news/news_2.jpg" alt="Новости" class="news-item__img">
+                        </div>
+                        <h4 class="news-item__title">Эксперт: как раскидать игрушки по всей квартире за 2 минуты?</h4>
+                        <span class="news-item__date">28 марта /</span>
+                        <a class="news-item__comments" href="#">15 Комментариев</a>
+                        <p class="news-item__teaser">Малыши часто тратят слишком много времени, чтобы раскидать свои игрушки ровным слоем по всей квартире. Наш эксперт даст несколько рекомендаций как делать это эффективно...</p>
+                        <a class="news-item__button" href="#">Читать далее</a>
+                    </article>
+                </div>
+                <div class="pure-u-1 pure-u-md-1-3 news__item">
+                    <article class="news-item">
+                        <div class="news-item__img-wrapper">
+                            <img src="img/news/news_3.jpg" alt="Новости" class="news-item__img">
+                        </div>
+                        <h4 class="news-item__title">Как эффективно и эффектно чихнуть кашей в лицо маме</h4>
+                        <span class="news-item__date">27 марта /</span>
+                        <a class="news-item__comments" href="#">10 Комментариев</a>
+                        <p class="news-item__teaser">Эта шутка должна быть в арсенале каждого малыша. Советы и рекомендации нашего эксперта Мити...</p>
+                        <a class="news-item__button" href="#">Читать далее</a>
                     </article>
                 </div>
             </div>
         </section>
+        
+        <section class="section partners">
+            <div class="pure-u-1 section__title">
+                <h3 class="title title_h3">Наши партнеры</h3>
+                <h2 class="title title_h2">C нами удобно</h2>
+            </div>
+            <div class="pure-g">
+                <div class="pure-u-1 partners__item">
+                    <div id="partnersCarousel" class="carousel">
+                        <div class="carousel__item"><img src="img/partners/partners_1.jpg" alt="" class="carousel__img"></div>
+                        <div class="carousel__item"><img src="img/partners/partners_2.jpg" alt="" class="carousel__img"></div>
+                        <div class="carousel__item"><img src="img/partners/partners_3.jpg" alt="" class="carousel__img"></div>
+                        <div class="carousel__item"><img src="img/partners/partners_4.jpg" alt="" class="carousel__img"></div>
+                        <div class="carousel__item"><img src="img/partners/partners_5.jpg" alt="" class="carousel__img"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <section class="section contacts">
+        <section id="contacts" class="section contacts">
             <div class="pure-g">
                 <div class="pure-u-1 section__title">
                     <h3 class="title title_h3">Не теряйте время</h3>
@@ -193,6 +244,7 @@
         </footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
         <script src="js/vendor/jquery.imageScroll.min.js"></script>
+        <script type="text/javascript" src="slick/slick.min.js"></script>
         <script src="js/main.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcrdb308_9HE8Sahb-nA30-VV7hHpwcmU&callback=initMap"></script>
     </body>
