--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
         <link rel="stylesheet" href="css/main.css">
         <!--[if lt IE 9]>
         <script>
-        document.createElement('header');
-        document.createElement('nav');
-        document.createElement('section');
-        document.createElement('article');
-        document.createElement('aside');
-        document.createElement('footer');
+        
         </script>
         <![endif]-->
     </head>
@@ -59,33 +54,43 @@
                 </nav>
             </div>
         </header>
-        <section id="home" class="section section-main">
+        <section id="home" class="main">
         </section>
-        <section id="about" class="section section-about pure-g">
-            <div class="pure-u-1 section__title">
-                <h3 class="title title_h3">Кто мы</h3>
-                <h2 class="title title_h2">Немного о нас</h2>
-            </div>
-            <div class="pure-u-1 pure-u-md-3-5">
-                <p class="section-about__text">
-                    Вы ищите «где купить детское питание оптом?» Открываете магазин детского питания или уже имеете свой бизнес? Наша компании — один из крупнейших поставщиков детских товаров на рынке Ярославля и области. Десятилетний опыт работы позволяет нам с уверенностью сказать: мы точно знаем, что нужно детям и их родителям.
-                </p>
-                <p class="section-about__text">
-                    А может быть вы счастливые родители и ищите качественные и недорогие товары для своего малыша? Для вашего удобства наши розничные магазины присутствуют почти в каждом районе города. Вы будете приятно удивлены ассортиментом и качеством товаров.
-                </p>
-            </div>
-            <div class="pure-u-1 pure-u-md-2-5 section-about__image">
-                <img class="pure-img" src="img/about-image.jpg">
-            </div>
-        </section>
-        <section id="sectionFacts" class="section section-facts" data-image="img/facts-bg.jpg">
+
+        <section id="about" class="about">
             <div class="pure-g">
-                <div class="pure-u-1 section__title">
-                    <h3 class="title title_h3 title_invert">Немного фактов</h3>
-                    <h2 class="title title_h2 title_invert">Нам есть чем гордиться</h3>
+                <div class="pure-u-1 section__titlebar">
+                    <div class="titlebar">
+                        <h3 class="titlebar__sub">Кто мы</h3>
+                        <h2 class="titlebar__header">Немного о нас</h2>
+                    </div> 
                 </div>
             </div>
-            <div class="pure-g section-facts__statistic">
+            <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-3-5">
+                    <p class="about__text">
+                        Вы ищите «где купить детское питание оптом?» Открываете магазин детского питания или уже имеете свой бизнес? Наша компании — один из крупнейших поставщиков детских товаров на рынке Ярославля и области. Десятилетний опыт работы позволяет нам с уверенностью сказать: мы точно знаем, что нужно детям и их родителям.
+                    </p>
+                    <p class="about__text">
+                        А может быть вы счастливые родители и ищите качественные и недорогие товары для своего малыша? Для вашего удобства наши розничные магазины присутствуют почти в каждом районе города. Вы будете приятно удивлены ассортиментом и качеством товаров.
+                    </p>
+                </div>
+                <div class="pure-u-1 pure-u-md-2-5">
+                    <img class="about__image" src="img/about-image.jpg">
+                </div>
+            </div>
+        </section>
+
+        <section id="sectionFacts" class="facts" data-image="img/facts-bg.jpg">
+            <div class="pure-g">
+                <div class="pure-u-1 section__titlebar">
+                    <div class="titlebar">
+                        <h3 class="titlebar__sub titlebar__sub_invert">Немного фактов</h3>
+                        <h2 class="titlebar__header titlebar__header_invert">Нам есть чем гордиться</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="pure-g facts__statistic">
                 <div class="pure-u-1 pure-u-sm-1-3 statistic">
                     <div class="statistic__number">10 лет</div>
                     <div class="statistic__text">на рынке</div>
@@ -101,11 +106,13 @@
             </div>
         </section>
 
-        <section id="news" class="section news">
+        <section id="news" class="news">
             <div class="pure-g">
-                <div class="pure-u-1 section__title">
-                    <h3 class="title title_h3">Наши новости</h3>
-                    <h2 class="title title_h2">Только самое свежее</h2>
+                <div class="pure-u-1 section__titlebar">
+                    <div class="titlebar">
+                        <h3 class="titlebar__sub">Наши новости</h3>
+                        <h2 class="titlebar__header">Только самое свежее</h2>
+                    </div>
                 </div>
             </div>
             <div class="pure-g">
@@ -148,10 +155,14 @@
             </div>
         </section>
         
-        <section class="section partners">
-            <div class="pure-u-1 section__title">
-                <h3 class="title title_h3">Наши партнеры</h3>
-                <h2 class="title title_h2">C нами удобно</h2>
+        <section class="partners">
+            <div class="pure-g">
+                <div class="pure-u-1 section__titlebar">
+                    <div class="titlebar">
+                        <h3 class="titlebar__sub">Наши партнеры</h3>
+                        <h2 class="titlebar__header">C нами удобно</h2>
+                    </div>
+                </div>
             </div>
             <div class="pure-g">
                 <div class="pure-u-1 partners__item">
@@ -166,11 +177,13 @@
             </div>
         </section>
 
-        <section id="contacts" class="section contacts">
+        <section id="contacts" class="contacts">
             <div class="pure-g">
-                <div class="pure-u-1 section__title">
-                    <h3 class="title title_h3">Не теряйте время</h3>
-                    <h2 class="title title_h2">Звоните прямо сейчас</h2>
+                <div class="pure-u-1 section__titlebar">
+                    <div class="titlebar">
+                        <h3 class="titlebar__sub">Не теряйте время</h3>
+                        <h2 class="titlebar__header">Звоните прямо сейчас</h2>
+                    </div>
                 </div>
             </div>
             <div class="pure-g">
@@ -203,13 +216,13 @@
                     </div>
                 </div>
             </div>
-        <div id="googleMap" class="contacts__map"></div>
+            <div id="googleMap" class="contacts__map"></div>
         </section>
 
         <footer class="footer">
             <div class="pure-g">
                 <div class="pure-u-1">
-                    <h3 class="title title_footer">Подпишитесь на наши новости</h3>
+                    <h3 class="footer__title">Подпишитесь на наши новости</h3>
                     <p class="footer__subtitle">Самые свежии акции и скидки нашей компании у Вас на почте</p>
                 </div>
                 <div class="pure-g">
@@ -222,7 +235,7 @@
                 </div>
                 <div class="pure-g">
                     <div class="pure-u-1 footer__copyright">
-                        <p class="footer__subtitle">&#169; С.В. Сороколет, 2016</p>
+                        <p class="copyright">&#169; С.В. Сороколет, 2016</p>
                     </div>
                 </div>
                 <div class="pure-g">
