--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         <link rel="stylesheet" href="css/pure/base-min.css">
         <link rel="stylesheet" href="css/pure/grids-min.css">
         <!--[if lte IE 8]>
-                <link rel="stylesheet" href="css/pure/grids-responsive-old-ie-min.css">
+        <link rel="stylesheet" href="css/pure/grids-responsive-old-ie-min.css">
         <![endif]-->
         <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
         <!--<![endif]-->
         <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-
         <link rel="stylesheet" href="fonts/open-sans/open-sans.css">
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
@@ -56,20 +55,19 @@
         </header>
         <section id="home" class="main">
         </section>
-
         <section id="about" class="about">
             <div class="pure-g">
                 <div class="pure-u-1 section__titlebar">
                     <div class="titlebar">
                         <h3 class="titlebar__sub">Кто мы</h3>
                         <h2 class="titlebar__header">Немного о нас</h2>
-                    </div> 
+                    </div>
                 </div>
             </div>
             <div class="pure-g">
                 <div class="pure-u-1 pure-u-md-3-5">
                     <p class="about__text">
-                        Вы ищите «где купить детское питание оптом?» Открываете магазин детского питания или уже имеете свой бизнес? Наша компании — один из крупнейших поставщиков детских товаров на рынке Ярославля и области. Десятилетний опыт работы позволяет нам с уверенностью сказать: мы точно знаем, что нужно детям и их родителям.
+                        Вы ищите «где купить детское питание оптом?» Открываете магазин детского питания или уже имеете свой бизнес? Наша компании является дистрибьютором в Ярославле и области крупнейших брендов детских товаров. Более 2500 наименований продукции от таких производителей как Фрутоняня, Сады Придонья, Нутриция, Симилак, Сами с усами, Нутрилак, Мерриес и многие другие. Десятилетний опыт работы позволяет нам с уверенностью сказать: мы точно знаем, что нужно детям и их родителям.
                     </p>
                     <p class="about__text">
                         А может быть вы счастливые родители и ищите качественные и недорогие товары для своего малыша? Для вашего удобства наши розничные магазины присутствуют почти в каждом районе города. Вы будете приятно удивлены ассортиментом и качеством товаров.
@@ -80,8 +78,7 @@
                 </div>
             </div>
         </section>
-
-        <section id="sectionFacts" class="facts" data-image="img/facts-bg.jpg">
+        <section class="parallax-window facts" data-parallax="scroll" data-image-src="img/facts-bg.jpg">
             <div class="pure-g">
                 <div class="pure-u-1 section__titlebar">
                     <div class="titlebar">
@@ -105,7 +102,6 @@
                 </div>
             </div>
         </section>
-
         <section id="news" class="news">
             <div class="pure-g">
                 <div class="pure-u-1 section__titlebar">
@@ -176,7 +172,6 @@
                 </div>
             </div>
         </section>
-
         <section id="contacts" class="contacts">
             <div class="pure-g">
                 <div class="pure-u-1 section__titlebar">
@@ -218,7 +213,6 @@
             </div>
             <div id="googleMap" class="contacts__map"></div>
         </section>
-
         <footer class="footer">
             <div class="pure-g">
                 <div class="pure-u-1">
@@ -256,7 +250,7 @@
             </div>
         </footer>
         <script src="js/vendor/jquery-1.12.2.js"></script>
-        <script src="js/vendor/jquery.imageScroll.min.js"></script>
+        <script src="js/vendor/parallax.min.js"></script>
         <script type="text/javascript" src="slick/slick.min.js"></script>
         <script src="js/main.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcrdb308_9HE8Sahb-nA30-VV7hHpwcmU&callback=initMap"></script>
