--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
         <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="css/pure/grids-responsive-min.css">
         <!--<![endif]-->
-        <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+        <link rel="stylesheet" href="slick/slick.css"/>
+        <link rel="stylesheet" href="slick/slick-theme.css"/>
+        <link rel="stylesheet" href="fonts/icons/icons.css">
         <link rel="stylesheet" href="fonts/open-sans/open-sans.css">
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/themes/color_green.css" disabled>
+        <link rel="stylesheet" href="css/themes/color_red.css" disabled>
+        <link rel="stylesheet" href="css/themes/color_purple.css" disabled>
+        <link rel="stylesheet" href="css/themes/color_blue.css" disabled>
         <!--[if lt IE 9]>
         <script>
         
@@ -33,7 +38,7 @@
             <div class="pure-g">
                 <div class="header__logo pure-u-1-2 pure-u-sm-4-5 pure-u-md-1-3">
                     <a class="logo" href="#">
-                        <span class="logo__text">Кр</span><span class="logo__baby"></span><span class="logo__text">ха</span>
+                        <span class="logo__text">Кр</span><span class="flaticon-baby logo__baby"></span><span class="logo__text">ха</span>
                     </a>
                 </div>
                 <div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
@@ -54,6 +59,26 @@
             </div>
         </header>
         <section id="home" class="main">
+            <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-7-12 main__intro">
+                    <div class="intro">
+                        <h2 class="intro__title">Детское питание и товары для детей</h2>
+                        <h3 class="intro__subtitle">С заботой о главном</h3>
+                        <p class="intro__text"></p>
+                        <a href="#about" class="intro__more-button">Узнать больше</a>
+                    </div>
+                </div>
+                <div class="pure-u-1 pure-u-md-5-12 main__call-form">
+                    <form class="call-form">
+                        <h4 class="call-form__header"></h4>
+                        <input type="text" class="call-form__name">
+                        <input type="email" class="call-form__email">
+                        <input type="phone" class="call-form__phone">
+                        <p class="call-form__text"></p>
+                        <a href="#" class="call-form__submit">Отправить</a>
+                    </form>
+                </div>
+            </div>
         </section>
         <section id="about" class="about">
             <div class="pure-g">
@@ -184,28 +209,28 @@
             <div class="pure-g">
                 <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
                     <div class="contact-item">
-                        <span class="contact-item__icon contact-item__icon_address"></span>
+                        <span class="contact-item__icon flaticon-location"></span>
                         <h4 class="contact-item__title">Наш офис</h4>
                         <p class="contact-item__text">г. Ярославль, ул. Журавлева, 5</p>
                     </div>
                 </div>
                 <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
                     <div class="contact-item">
-                        <span class="contact-item__icon contact-item__icon_phone"></span>
+                        <span class="contact-item__icon flaticon-phone"></span>
                         <h4 class="contact-item__title">Позвоните</h4>
                         <p class="contact-item__text">+7 (4852) 45-21-59<br>+7 (4852) 47-79-42</p>
                     </div>
                 </div>
                 <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
                     <div class="contact-item">
-                        <span class="contact-item__icon contact-item__icon_mail"></span>
+                        <span class="contact-item__icon flaticon-mail"></span>
                         <h4 class="contact-item__title">Напишите</h4>
                         <p class="contact-item__text"><a href="mailto: pitanie@inbox.ru" class="contact-item__link">pitanie@inbox.ru</a></p>
                     </div>
                 </div>
                 <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4 contacts__item">
                     <div class="contact-item">
-                        <span class="contact-item__icon contact-item__icon_working-hours"></span>
+                        <span class="contact-item__icon flaticon-clock"></span>
                         <h4 class="contact-item__title">Рабочие часы</h4>
                         <p class="contact-item__text">Будни 9:00 - 18:00</p>
                     </div>
