--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/themes/color_green.css" disabled>
-        <link rel="stylesheet" href="css/themes/color_red.css" disabled>
-        <link rel="stylesheet" href="css/themes/color_purple.css" disabled>
-        <link rel="stylesheet" href="css/themes/color_blue.css" disabled>
+        <link rel="stylesheet" href="css/themes/color_green.css" data-color="green" disabled>
+        <link rel="stylesheet" href="css/themes/color_red.css" data-color="red" disabled>
+        <link rel="stylesheet" href="css/themes/color_purple.css" data-color="purple" disabled>
+        <link rel="stylesheet" href="css/themes/color_blue.css" data-color="blue" disabled>
         <!--[if lt IE 9]>
         <script>
         
@@ -34,6 +34,15 @@
         <![endif]-->
     </head>
     <body>
+        <div id="settings" class="settings settings_hided" data-show=false>
+            <div id="settingsButton" class="settings__button"></div>
+            <h5 class="settings__header">Основной цвет</h5>
+            <span class="settings__color-picker" data-color="yellow"></span>
+            <span class="settings__color-picker settings__color-picker_green" data-color="green"></span>
+            <span class="settings__color-picker settings__color-picker_red" data-color="red"></span>
+            <span class="settings__color-picker settings__color-picker_purple" data-color="purple"></span>
+            <span class="settings__color-picker settings__color-picker_blue" data-color="blue"></span>
+        </div>
         <header class="header">
             <div class="pure-g">
                 <div class="header__logo pure-u-1-2 pure-u-sm-4-5 pure-u-md-1-3">
