--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         <link rel="stylesheet" href="fonts/oswald/oswald.css">
         <link rel="stylesheet" href="fonts/lobster/lobster.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/themes/color_green.css" data-color="green" disabled>
-        <link rel="stylesheet" href="css/themes/color_red.css" data-color="red" disabled>
-        <link rel="stylesheet" href="css/themes/color_purple.css" data-color="purple" disabled>
-        <link rel="stylesheet" href="css/themes/color_blue.css" data-color="blue" disabled>
+        <link rel="stylesheet" href="" id="theme">
         <!--[if lt IE 9]>
         <script>
         
@@ -37,11 +34,11 @@
         <div id="settings" class="settings settings_hided" data-show=false>
             <div id="settingsButton" class="settings__button"></div>
             <h5 class="settings__header">Основной цвет</h5>
-            <span class="settings__color-picker" data-color="yellow"></span>
-            <span class="settings__color-picker settings__color-picker_green" data-color="green"></span>
-            <span class="settings__color-picker settings__color-picker_red" data-color="red"></span>
-            <span class="settings__color-picker settings__color-picker_purple" data-color="purple"></span>
-            <span class="settings__color-picker settings__color-picker_blue" data-color="blue"></span>
+            <span class="settings__color-picker" rel=""></span>
+            <span class="settings__color-picker settings__color-picker_green" rel="css/themes/color_green.css"></span>
+            <span class="settings__color-picker settings__color-picker_red" rel="css/themes/color_red.css"></span>
+            <span class="settings__color-picker settings__color-picker_purple" rel="css/themes/color_purple.css"></span>
+            <span class="settings__color-picker settings__color-picker_blue" rel="css/themes/color_blue.css"></span>
         </div>
         <header class="header">
             <div class="pure-g">
