--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </div>
                 <div class="header__menu pure-u-1-2 pure-u-md-2-3 pure-hidden-sm pure-hidden-xs">
                     <nav class="menu menu_twitter-like">
-                        <a class="menu__item" href="#home">Главная</a>
+                        <a class="menu__item menu__item_active" href="#home">Главная</a>
                         <a class="menu__item" href="#about">О нас</a>
-                        <a class="menu__item menu__item_active" href="#news">Новости</a>
+                        <a class="menu__item" href="#news">Новости</a>
                         <a class="menu__item" href="#contacts">Контакты</a>
                     </nav>
                 </div>
@@ -66,23 +66,28 @@
         </header>
         <section id="home" class="main">
             <div class="pure-g">
-                <div class="pure-u-1 pure-u-md-7-12 main__intro">
+                <div class="pure-u-1 pure-u-md-2-3 main__intro">
                     <div class="intro">
-                        <h2 class="intro__title">Детское питание и товары для детей</h2>
-                        <h3 class="intro__subtitle">С заботой о главном</h3>
-                        <p class="intro__text"></p>
-                        <a href="#about" class="intro__more-button">Узнать больше</a>
+                        <h2 class="intro__title">С заботой о главном</h2>
+                        <h3 class="intro__subtitle">Дистрибьюция питания и товаров для детей</h3>
+                        <p class="intro__text">
+                            Наша главная цель — забота о малыше и маме, выраженная в предоставлении качественных, полезных и доступных товаров для здорового питания роста и развития ребенка.
+                        </p>
+                        <p class="intro__text">
+                            На сегодняшний день наша компания является одним из лидеров оптового и розничного рынков Ярославля.  Наши оптовые клиенты, это не только розничные торговые точки, но и сетевые магазины, аптеки, медицинские учреждения нашей области.
+                        </p>
+                        <a href="#about" class="intro__more-button">Узнать больше  о нас</a>
                     </div>
                 </div>
-                <div class="pure-u-1 pure-u-md-5-12 main__call-form">
-                    <form class="call-form">
-                        <h4 class="call-form__header"></h4>
-                        <input type="text" class="call-form__name">
-                        <input type="email" class="call-form__email">
-                        <input type="phone" class="call-form__phone">
+                <div class="pure-u-1 pure-u-md-1-3 main__call-form">
+                    <!-- <form class="call-form">
+                        <h4 class="call-form__header">Хотите получить 5% скидку? Напишите нам</h4>
+                        <input type="text" class="call-form__input">
+                        <input type="email" class="call-form__input">
+                        <input type="phone" class="call-form__input">
                         <p class="call-form__text"></p>
                         <a href="#" class="call-form__submit">Отправить</a>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </section>
@@ -109,7 +114,7 @@
                 </div>
             </div>
         </section>
-        <section class="parallax-window facts" data-parallax="scroll" data-image-src="img/facts-bg.jpg">
+        <section id="about" class="parallax-window facts" data-parallax="scroll" data-image-src="img/facts-bg.jpg">
             <div class="pure-g">
                 <div class="pure-u-1 section__titlebar">
                     <div class="titlebar">
